creates endpoint to mark product as trash
